--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
   "name": "terra-discord.bot",
-  "description": "A discord bot based on discord. js currently in development.",
+  "description": "A discord bot based on discord.js currently in development.",
   "version": "0.3.5",
   "main": "core.js",
   "dependencies": {
-    "canvas": "^2.8.0",
-    "discord-buttons": "^3.2.1",
-    "discord.js": "^12.3.1",
-    "dotenv": "^10.0.0",
-    "erela.js": "^2.3.3",
+    "canvas": "^2.11.2",
+    "dotenv": "^16.3.1",
+    "eris": "^0.17.2",
+    "erela.js": "^2.4.0",
     "erela.js-spotify": "^1.2.0",
     "fs": "^0.0.1-security",
-    "mathjs": "^9.4.3",
+    "mathjs": "^11.8.2",
     "ms": "^2.1.3",
-    "ping": "^0.4.1",
-    "pretty-ms": "^7.0.1"
+    "ping": "^0.4.4",
+    "pretty-ms": "^8.0.0"
   },
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "test": "echo \"The build complete d so you are fine\" && node .",
+    "test": "echo \"The build completed so you are fine\" && node .",
     "start": "node ."
   },
   "author": "pieckenst",
