--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "core.js",
   "dependencies": {
     "canvas": "^2.11.2",
+    "chalk": "^5.3.0",
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "erela.js": "^2.4.0",
     "erela.js-spotify": "^1.2.0",
