--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "canvas": "^2.11.2",
     "chalk": "^5.3.0",
     "colors": "^1.4.0",
+    "consola": "^3.2.3",
     "dotenv": "^16.3.1",
     "erela.js": "^2.4.0",
     "erela.js-spotify": "^1.2.0",
