WORK ON FEATURE FLAGS

--- a/src/config.json
+++ b/src/config.json
@@ -12,5 +12,9 @@
   "clientSecret":"fd6db77d2ec64e77939269e45c2c4ffd",
   "host": "n17.danbot.host",
   "port":1679,
-  "password":"DBH"
+  "password":"DBH",
+  "featureFlags": {
+    "useDiscordJS": false,
+    "disabledCommands": []
+  }
 }
