--- a/src/package.json
+++ b/src/package.json
@@ -47,7 +47,7 @@
     "mathjs": "^11.8.2",
     "ms": "^2.1.3",
     "next": "^15.0.0-canary.161",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.21",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "perfect-debounce": "^1.0.0",
