--- a/discordkit/tsconfig.json
+++ b/discordkit/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "module": "ES2022",
     "target": "es2022",
+    "allowSyntheticDefaultImports": true,
+    
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
@@ -20,7 +22,6 @@
     "noStrictGenericChecks": true,
     "noImplicitAny": false,
     "suppressImplicitAnyIndexErrors":true,
-    
     
   }
 }
