--- a/src/package.json
+++ b/src/package.json
@@ -8,17 +8,14 @@
     "@fastify/cors": "^10.0.1",
     "@fastify/nextjs": "^11.0.0",
     "@fastify/static": "^8.0.1",
-    "@glennsl/rescript-fetch": "^0.2.2",
     "@neondatabase/serverless": "^0.9.5",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@rescript/core": "^1.6.0",
-    "@rescript/react": "^0.13.0",
     "@types/axios": "^0.14.0",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.5.2",
     "@types/react": "^18.3.8",
     "@types/ws": "^8.5.12",
     "@vercel/analytics": "^1.3.1",
@@ -63,8 +60,6 @@
     "process": "^0.11.10",
     "react": "^19.0.0-rc-e4953922-20240919",
     "react-dom": "^19.0.0-rc-e4953922-20240919",
-    "rescript": "^11.1.4",
-    "rescript-webapi": "^0.9.1",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.13",
@@ -76,9 +71,7 @@
   "scripts": {
     "test": "echo \"The build completed so you are fine\" && node .",
     "start": "node .",
-    "build": "tsc",
-    "res:build": "rescript",
-    "res:dev": "rescript -w"
+    "build": "tsc"
   },
   "author": "pieckenst",
   "repository": {
